
2008-06-24 tdb
 * Added the trailing slash to view links

2008-06-26 tdb
 * Added AJAX-based file upload progress reporting
 * Only allow batch editing of eprint objects

2008-07-03 tdb
 * Removed unused database method "create_login_tickets_table"

2008-07-04 tdb
 * Changed default file hashing to use SHA-256

2008-07-07 tdb
 * Added a USR2 signal handler for debugging 100% cpu situations
 * If phrases or workflow aren't writable don't abort when writing new fields

2008-07-10 tdb
 * Added default account for CrossRef imports, fixing #3397
 * Check for an XML "unresolved" response from CrossRef, fixing #3386
 * Added get_primary_key method to Database to fix #3396
 * import_subjects will not ask for confirmation if there are no existing
    subjects

2008-07-14 cjg + af05v
 * Spun "Box" off into it's own package with some funky options.

2008-07-14 cjg + af05v
 * Added call_back options to render view menus and view items pages.

2008-07-17 tdb
 * When importing BibTeX can now specify email addresses
 * Show the inserts if a phrase is undefined

2008-07-18 tdb
 * Added get_default_charset and get_default_collation methods to Database
 * Can now specify merge and match settings in advanced search configuration
 * Added --update option to bin/import to update existing records

2008-07-23 tdb
 * Indexer daemon checking now looks at /proc/$pid, fixing #3311

2008-07-25 tdb
 * Thumbnail module for video files (based on Seb's work for EdSpace)
 * Video thumbnail module for generating flash-video previews
 * Added convenience method for getting the datestamp of an object
 * Added video preview to abstract pages

2008-07-28 tdb
 * Changed preview to use Lightbox 2 and added support for video previewing

2008-07-29 tdb
 * Refined the $doc->render_preview_link() method
 
2008-08-05 tdb
 * If no mime-type is available default to application/octet-stream
 * Added "download=1" optional parameter for Storage requests
